--- a/dugun.html
+++ b/dugun.html
@@ -165,7 +165,7 @@
       </div>
       <div class="row" id="lightgallery">
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_1.jpg">
-          <a href="#"><img src="images/nature_small_1.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_2.jpg">
           <a href="#"><img src="images/nature_small_2.jpg" alt="IMage" class="img-fluid"></a>
