--- a/dugun.html
+++ b/dugun.html
@@ -168,26 +168,26 @@
           <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_2.jpg">
-          <a href="#"><img src="images/nature_small_2.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_3.jpg">
-          <a href="#"><img src="images/nature_small_3.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_4.jpg" >
-          <a href="#"><img src="images/nature_small_4.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_5.jpg" >
-          <a href="#"><img src="images/nature_small_5.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_6.jpg" >
-          <a href="#"><img src="images/nature_small_6.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
 
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_7.jpg">
-          <a href="#"><img src="images/nature_small_7.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/big-images/nature_big_8.jpg">
-          <a href="#"><img src="images/nature_small_8.jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/enes.png" alt="IMage" class="img-fluid"></a>
         </div>
 
 
