--- a/dugun.html
+++ b/dugun.html
@@ -117,7 +117,7 @@
 
       <div class="row mb-5">
         <div class="col-md-7">
-          <img src="images/dugun.jpg" alt="Images" class="img-fluid">
+          <img src="images/enes2.png" alt="Images" class="img-fluid">
         </div>
         <div class="col-md-4 ml-auto">
           <h3 class="text-white">Lidya Fotoğrafçılık</h3>
